--- a/cluster/openstack-heat/kubernetes-heat/fragments/configure-salt.yaml
+++ b/cluster/openstack-heat/kubernetes-heat/fragments/configure-salt.yaml
@@ -41,7 +41,7 @@ write_files:
     content: |
       service_cluster_ip_range: 10.246.0.0/16
       cert_ip: 10.246.0.1
-      enable_cluster_monitoring: influxdb
+      enable_cluster_monitoring: $ENABLE_CLUSTER_MONITORING
       enable_cluster_logging: "true"
       enable_cluster_ui: "true"
       enable_node_logging: "true"
